# vesselapi-python

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: async_basic.py  basic.py
openapi/: swagger.json
src/vessel_api_python/: __init__.py  _client.py  _constants.py  _errors.py  _iterator.py  _models.py  _services.py  _transport.py
tests/: conftest.py  test_client.py  test_errors.py  test_iterator.py  test_services.py  test_smoke.py  test_transport.py
